tests/invalid/default_parameter_entry_not_allowed.wio
fn Entry(args: string[] = []) -> i32 {
    return 0;
}
